package com.example.ex0251.targil1;

public abstract class Vehicle {
    public abstract void accelerate();
    public abstract void start();
    public abstract void stop();
}
